--- a/SkillCraft/src/index.css
+++ b/SkillCraft/src/index.css
@@ -80,19 +80,115 @@ label{
 }
 .page {
   background-color: white;
-  width: 210mm; /* A4 width */
-  height: 297mm; /* A4 height */
-  margin-left: auto; /* Center horizontally */
-  margin-right: auto; /* Center horizontally */
+  width: 210mm; 
+  height: 297mm; 
+  margin-left: auto; 
+  margin-right: auto; 
   margin-top: 20px;
 
   top: 70px;
   left: 0;
   right: 0;
+  color: black;
 }
 
 .pcont{
   
   width: 100%; 
   padding: 20px; 
+}
+.page{
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+.rp{
+  display: flex;
+  flex-direction: column;
+  margin-top: 15px;
+  align-items: center;
+  gap: 10px;
+}
+.rcont{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+.rcont div{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2px;
+}
+.rname{
+  font-size: 40px;
+  color: rgb(10, 65, 87);
+}
+
+.rp,.red,.rex,.rpr{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.call{
+  height: 10px;
+}
+.mail{
+  height: 15px;
+}
+.location{
+  height: 10px;
+}
+.loca{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2px;
+}
+.rab{
+  padding: 10px;
+  font-size: 18px;
+}
+.title{
+  font-size: 35px;
+  padding: 5px;
+  color: rgb(10, 65, 87);
+}
+.redname{
+  display: flex;
+  justify-content: space-between;
+}
+.edtime{
+  display: flex;
+  gap: 10px;
+}
+.edloc{
+  display: flex;
+  gap: 10px;
+  font-size: 15px;
+  padding-top: 5px;
+}
+.rexn{
+  display: flex;
+  justify-content: space-between;
+}
+.extime{
+  display: flex;
+  gap: 10px;
+}
+.exdesc{
+  padding-top: 5px;
+}
+.rpr{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.export{
+  background-color: #dc5c30;
+  color: white;
+  border-radius: 15px;
+  font-family: "cindie";
+  padding: 5px;
 }
